# DeepLearningEnergyForecasting

./: .dockerignore  .env-mock  .gitignore  .markdownlint.jsonc  1_DataPrep.ipynb  2_EDA.ipynb  3.0_FeatureEngineering.ipynb  3.1_DeepAR.ipynb  3.1_QuantileLSTM.ipynb  3.1_StatefulLSTM.ipynb  3.2_LITransformer.ipynb  3.2_iQuantileTransformer.ipynb  4.0_GaussianProcess.ipynb  4.1_DartsLM.ipynb  Dockerfile  LICENSE  MISC_GPyTorchClasses.py  MISC_TorchClassesLSTM.py  MISC_TorchClassesTransformer.py  Makefile  README.md  Report.md  WIP_DartsLM.ipynb  X_DartsBacktest.ipynb  X_LinearExtrapolation.ipynb  compose.yml  pyproject.toml  requirements.txt
analysis/: 1-data-prep.ipynb  2-eda.ipynb  3-feature-engineering.ipynb  4.0-stateful-lstm.ipynb  4.1-li-transformer.ipynb  4.2-gaussian-process.ipynb  misc-torch-linear-extrapolation.ipynb  wip-darts-lm.ipynb
models/gaussian_process/: ExactGP1.pth
notebooks/analysis/: 1-data-prep.ipynb  2-eda.ipynb  3-feature-engineering.ipynb  4.0-stateful-lstm.ipynb  4.1-li-transformer.ipynb  4.2-gaussian-process.ipynb  misc-torch-linear-extrapolation.ipynb  wip-darts-lm.ipynb
notebooks/deployment/: 1-get-data.ipynb  1-update-data.ipynb  X-drop-duplicates.ipynb
requirements/: all.txt  deployment.txt
scripts/deployment/: batch_predict.py  train_model.py  tune_model.py  update_raw_data.py  update_training_data.py
src/: utils.py
src/data_extraction/: api.py
src/deep_learning/: lstm.py  prediction.py  preprocessing.py  quantile_loss.py  testing.py  transformer.py
src/eda/: autocorrelation.py  seasonal_plots.py  time_plot.py
(+4 files in other folders)
