[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
dependencies = [
	"hydra-core==1.3.2",	
	"numpy==1.26.4",
	"pandas==2.2.1",
	"python-dotenv==1.0.1",
	"requests== 2.31.0"
]

[project.optional-dependencies]
analysis = [
	"gpytorch==1.11",
	"statsmodels==0.14.1",
	"u8darts==0.27.2"
]

temp = [
	"lightning==2.4.0",
	"torch==2.2.1+cu121",
	"matplotlib==3.8.3",
	"optuna==3.5.0",
	"scikit_learn==1.5.0",
	"seaborn==0.13.2"
]